<resources>
    <string name="app_name">StudentApp</string>
    <string name="login">Login</string>
    <string name="new_user_register">New user? Register</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="timetable">TimeTable</string>
    <string name="attendance">Attendance</string>
    <string name="resources">Resources</string>
    <string name="marks">Marks</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="course_name">Course Name</string>
    <string name="select_time">Select Time</string>
    <string name="add_course">Add Course</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_course">Edit Course</string>
    <string name="course1">Course1</string>
    <string name="absent">Absent:</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_name">Student Name</string>
    <string name="sample_email">abc@gmail.com</string>
    <string name="total_marks">Total</string>
    <string name="marks_obtained">Obtained</string>
    <string name="test_name">Test Name</string>
    <string name="maximum_marks">Maximum Marks</string>
    <string name="test_marks_obtained">Marks Obtained</string>
    <string name="add_test">Add Test</string>
    <string name="questions">Questions?</string>
    <string name="department">Department</string>
    <string name="computer_science">CSE</string>
    <string name="electrical">Electrical</string>
    <string name="mechanical">Mechanical</string>
    <string name="civil">Civil</string>
    <string name="files">Files</string>
    <string name="file_name">File Name</string>
    <string name="upload">Upload</string>
    <string name="h2t">Img2Txt</string>
    <string name="take_picture">Browse</string>
    <string name="convert">convert</string>
    <string name="messenger">Messenger</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_marks">Edit Marks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total</string>
</resources>