<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".AddData">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/textView"
        android:src="@drawable/edit_course"
        app:civ_border_width="1dp"
        app:civ_border_color="#FF000000"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/edit_course"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_course"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.362" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_course"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:padding="10dp"
            android:textColorHint="@color/borderColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/select_time"
            android:textColor="@color/borderColor"
            android:textSize="20sp" />

        <TimePicker
            android:id="@+id/edit_time"
            android:layout_width="264dp"
            android:layout_height="177dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:timePickerMode="spinner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_cancel"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/btnBgColor"
                android:padding="20dp"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_submit"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:background="@color/btnBgColor"
                android:padding="20dp"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>