<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/test_name"
            android:text="@string/course1"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_marks"
            android:text="@string/total_marks"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_below="@id/test_name"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_marks_value"
            android:text="0"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_below="@id/test_name"
            android:layout_toEndOf="@id/total_marks"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/marks_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_name"
            android:text="@string/marks_obtained"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/total_marks_value"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/marks_obtained_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_name"
            android:text="0"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/marks_obtained"
            android:layout_marginStart="10dp"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>