<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/student"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/update_image"
            android:layout_width="51dp"
            android:layout_height="54dp"
            android:layout_alignStart="@+id/profile_image"
            android:layout_alignTop="@+id/profile_image"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignBottom="@+id/profile_image"
            android:layout_marginStart="123dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="-24dp"
            android:layout_marginBottom="-14dp"
            android:src="@drawable/photo"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.111">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/full_name"
            android:textColorHint="@color/borderColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_password"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/btnBgColor"
            android:padding="20dp"
            android:text="@string/change_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_update"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/btnBgColor"
            android:padding="20dp"
            android:text="@string/update" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>